--- a/Assets/StreamingAssets/Languages/en.xml
+++ b/Assets/StreamingAssets/Languages/en.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0"?>
 <LanguageContainer xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <Texts>
-    <string>Hello and welcome</string>
-  </Texts>
-  <Images />
-  <AudioFiles />
+  <TextEntries>
+    <Text>Hello and welcome</Text>
+  </TextEntries>
+  <Images>
+	<Path>StreamingAssets\Languages\en\Logo.png</Path>
+</Images>
+  <AudioFiles>
+	<Path>StreamingAssets\Languages\en\Test.wav</Path>
+</AudioFiles>
 </LanguageContainer>
