--- a/Assets/StreamingAssets/Languages/nl.xml
+++ b/Assets/StreamingAssets/Languages/nl.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0"?>
 <LanguageContainer xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <Texts>
-    <string>Welkom</string>
-  </Texts>
-  <Images />
-  <AudioFiles />
+  <TextEntries>
+    <Text>Welkom</Text>
+  </TextEntries>
+  <Images>
+  	<Path>StreamingAssets\Languages\nl\Logo.png</Path>
+  </Images>
+  <AudioFiles>
+	<Path>StreamingAssets\Languages\nl\Test.wav</Path>
+</AudioFiles>
 </LanguageContainer>
