--- a/Assets/StreamingAssets/Languages/nl.xml
+++ b/Assets/StreamingAssets/Languages/nl.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <LanguageContainer xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <TextEntries>
     <Text>Welkom</Text>
